--- a/SOKOBAN_Dueling_DQN.ipynb
+++ b/SOKOBAN_Dueling_DQN.ipynb
@@ -206,7 +206,9 @@
         "\n",
         "    def __init__(self, h, w, outputs):\n",
         "        super(DQN, self).__init__()\n",
-        "        self.conv1 = nn.Conv2d(3, 32, kernel_size=8, stride=4)\n",
+        "      \n",
+        "\n",
+        "        self.conv1 = nn.Conv2d(1, 32, kernel_size=8, stride=4)\n",
         "        #self.bn1 = nn.BatchNorm2d(16)\n",
         "        self.conv2 = nn.Conv2d(32, 64, kernel_size=4, stride=2)\n",
         "        #self.bn2 = nn.BatchNorm2d(32)\n",
@@ -270,11 +272,11 @@
         "id": "QD9JHXWNXNi1"
       },
       "source": [
-        "policy_net = DQN(screen_height, screen_width, n_actions)\n",
-        "policy_net.init_weights()\n",
-        "policy_net.to(device)\n",
+        "# policy_net = DQN(screen_height, screen_width, n_actions)\n",
+        "# policy_net.init_weights()\n",
+        "# policy_net.to(device)\n",
         "\n",
-        "t = policy_net(state)"
+        "# t = policy_net(state)"
       ],
       "execution_count": null,
       "outputs": []
@@ -285,13 +287,13 @@
         "id": "5g2E6ea0bZqa"
       },
       "source": [
-        "# resize = T.Compose([\n",
-        "#                     T.ToPILImage(),\n",
-        "#                     T.Grayscale(num_output_channels=1),\n",
-        "#                     T.Resize(80, interpolation=Image.CUBIC),\n",
-        "#                     T.ToTensor()])\n",
+        "resize = T.Compose([\n",
+        "                    T.ToPILImage(),\n",
+        "                    T.Grayscale(num_output_channels=1),\n",
+        "                    #T.Resize(80, interpolation=Image.CUBIC),\n",
+        "                    T.ToTensor()])\n",
         "\n",
-        "resize = T.Compose([T.ToTensor()])\n",
+        "#resize = T.Compose([T.ToTensor()])\n",
         "\n",
         "\n",
         "def get_screen():\n",
@@ -333,6 +335,8 @@
         "# returned from AI gym. Typical dimensions at this point are close to 3x40x90\n",
         "# which is the result of a clamped and down-scaled render buffer in get_screen()\n",
         "init_screen = get_screen()\n",
+        "\n",
+        "\n",
         "\n",
         "_, screen_height, screen_width = init_screen.shape\n",
         "\n",
@@ -403,18 +407,31 @@
       "source": [
         "def select_action(state):\n",
         "    global steps_done\n",
-        "    sample = random.random()\n",
-        "    eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
-        "        math.exp(-1. * steps_done / EPS_DECAY)\n",
         "    steps_done += 1\n",
-        "    if sample > eps_threshold:\n",
-        "        with torch.no_grad():\n",
-        "            # t.max(1) will return largest column value of each row.\n",
-        "            # second column on max result is index of where max element was\n",
-        "            # found, so we pick action with the larger expected reward.\n",
-        "            return policy_net(state).max(1)[1].view(1, 1)\n",
-        "    else:\n",
-        "        return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
+        "\n",
+        "    # sample = random.random()\n",
+        "    # eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
+        "    #     math.exp(-1. * steps_done / EPS_DECAY)\n",
+        "    \n",
+        "    # if sample > eps_threshold:\n",
+        "    #     with torch.no_grad():\n",
+        "    #         # t.max(1) will return largest column value of each row.\n",
+        "    #         # second column on max result is index of where max element was\n",
+        "    #         # found, so we pick action with the larger expected reward.\n",
+        "    #         return policy_net(state).max(1)[1].view(1, 1)\n",
+        "    # else:\n",
+        "    #     return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "      xxx = policy_net(state).cpu().detach().numpy().flatten()\n",
+        "      m = xxx.min()\n",
+        "      vals = xxx - m + 0.0001\n",
+        "\n",
+        "      s = np.sum(vals)\n",
+        "      ps = vals/s\n",
+        "\n",
+        "      val = np.random.choice(n_actions, p = ps)\n",
+        "      return torch.tensor([[val]], device=device, dtype=torch.long)\n",
         "\n",
         "\n",
         "\n",
@@ -508,11 +525,14 @@
         "memory = ReplayMemory(2500)\n",
         "policy_net.train()\n",
         "target_net.eval()\n",
-        "sarsa_k = 4\n",
+        "sarsa_k = 1\n",
         "\n",
         "\n",
         "for i_episode in range(num_episodes):\n",
         "    \n",
+        "    if i_episode % 100 == 0:\n",
+        "      print(i_episode)\n",
+        "\n",
         "    env.reset()\n",
         "    state = get_screen().unsqueeze(0)\n",
         "\n",
@@ -589,6 +609,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "LTWx7YG4z8lS"
+      },
+      "source": [
+        "np.bincount(episode_durations, minlength=2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "5f4F4N3UQotd"
       },
       "source": [
@@ -603,7 +634,7 @@
         "id": "a7hyAIGM0AEB"
       },
       "source": [
-        "env.max_steps = 500"
+        "env.max_steps"
       ],
       "execution_count": null,
       "outputs": []
@@ -615,17 +646,6 @@
       },
       "source": [
         " EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1RzpP6dHACiv"
-      },
-      "source": [
-        "policy_net.val.weight"
       ],
       "execution_count": null,
       "outputs": []
@@ -648,7 +668,17 @@
       },
       "source": [
         "x  = policy_net(state)\n",
-        "torch.argmax(x), x, target_net(state)"
+        "# torch.argmax(x), x, target_net(state)\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "  xxx = policy_net(state).cpu().detach().numpy().flatten()\n",
+        "  m = xxx.min()\n",
+        "  vals = xxx - m + 0.0001\n",
+        "\n",
+        "  s = np.sum(vals)\n",
+        "  ps = vals/s\n",
+        "\n",
+        "np.max(ps), np.argmax(ps), ps"
       ],
       "execution_count": null,
       "outputs": []
@@ -659,6 +689,7 @@
         "id": "tx5MaYZAuWrs"
       },
       "source": [
+        "\n",
         "x = env.reset()"
       ],
       "execution_count": null,
@@ -676,6 +707,18 @@
         "# plt.imshow(i2)\n",
         "# plt.show()\n",
         "plt.imshow(i2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5-ZCpOp2y7aP"
+      },
+      "source": [
+        "# _, reward, done, _ = env.step(4)\n",
+        "# reward, done"
       ],
       "execution_count": null,
       "outputs": []
@@ -741,6 +784,27 @@
       "source": [
         "x = policy_net(state)\n",
         "x, torch.argmax(x)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "80YZGveAqGPB"
+      },
+      "source": [
+        "x = policy_net(state)\n",
+        "xxx = x.cpu().detach().numpy().flatten()\n",
+        "m = xxx.min()\n",
+        "\n",
+        "vals = xxx - m + 0.0001\n",
+        "\n",
+        "s = np.sum(vals)\n",
+        "ps = vals/s\n",
+        "\n",
+        "\n",
+        "np.random.choice(n_actions, p = ps), np.max(ps), ps"
       ],
       "execution_count": null,
       "outputs": []
