--- a/SOKOBAN_Dueling_DQN.ipynb
+++ b/SOKOBAN_Dueling_DQN.ipynb
@@ -623,7 +623,7 @@
         "id": "5f4F4N3UQotd"
       },
       "source": [
-        "sarsa_k_states[0][1]"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -702,11 +702,12 @@
       },
       "source": [
         "state = get_screen().unsqueeze(0)\n",
-        "i2 = state.squeeze(0).squeeze(0).permute(1,2,0)\n",
-        "# plt.gray()\n",
-        "# plt.imshow(i2)\n",
+        "i2 = state.squeeze(0).squeeze(0)\n",
+        "plt.gray()\n",
+        "plt.imshow(i2)\n",
         "# plt.show()\n",
-        "plt.imshow(i2)"
+        "# plt.imshow(i2)\n",
+        "# i2.shape"
       ],
       "execution_count": null,
       "outputs": []
@@ -731,7 +732,7 @@
       "source": [
         "action = select_action(state)\n",
         "_, reward, done, _ = env.step(action.item())\n",
-        "action, reward"
+        "action.item(), reward"
       ],
       "execution_count": null,
       "outputs": []
@@ -743,7 +744,7 @@
       },
       "source": [
         "next_state = get_screen()\n",
-        "i2 = next_state.squeeze(0).squeeze(0).permute(1,2,0)\n",
+        "i2 = state.squeeze(0).squeeze(0)\n",
         "#plt.gray()\n",
         "# plt.imshow(i2)\n",
         "# plt.show()\n",
