--- a/SOKOBAN_Dueling_DQN.ipynb
+++ b/SOKOBAN_Dueling_DQN.ipynb
@@ -28,15 +28,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5L88ZFOfGsYB"
-      },
-      "source": [
-        "Based on https://ymd_h.gitlab.io/ymd_blog/posts/gym_on_google_colab_with_gnwrapper/"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1u9QVVsShC9X"
       },
       "source": [
@@ -75,7 +66,6 @@
         "id": "KEHR2Ui-lo8O"
       },
       "source": [
-        "\n",
         "import gym\n",
         "import gym_sokoban\n",
         "\n",
@@ -124,7 +114,7 @@
       },
       "source": [
         "env = gym.make(\"PushAndPull-Sokoban-v2\")\n",
-        "env.max_steps =  500 \n",
+        "env.max_steps =  5000 \n",
         "screen = env.render(mode='rgb_array')\n",
         "print(screen.shape)"
       ],
@@ -150,20 +140,6 @@
       "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "device"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Aym7pOFYYZFX"
-      },
-      "source": [
-        "# from skimage import color\n",
-        "# # img = color.rgb2gray(screen)\n",
-        "# # plt.imshow(img)\n",
-        "# screen.shape"
       ],
       "execution_count": null,
       "outputs": []
@@ -202,66 +178,115 @@
         "id": "oN-_r-DJbTOb"
       },
       "source": [
-        "class DQN(nn.Module):\n",
+        "# class DQN(nn.Module):\n",
         "\n",
-        "    def __init__(self, h, w, outputs):\n",
-        "        super(DQN, self).__init__()\n",
+        "#     def __init__(self, h, w, outputs):\n",
+        "#         super(DQN, self).__init__()\n",
         "      \n",
         "\n",
-        "        self.conv1 = nn.Conv2d(1, 32, kernel_size=8, stride=4)\n",
-        "        #self.bn1 = nn.BatchNorm2d(16)\n",
-        "        self.conv2 = nn.Conv2d(32, 64, kernel_size=4, stride=2)\n",
-        "        #self.bn2 = nn.BatchNorm2d(32)\n",
-        "        self.conv3 = nn.Conv2d(64, 64, kernel_size=3, stride=1)\n",
-        "        #self.bn3 = nn.BatchNorm2d(32)\n",
+        "#         self.conv1 = nn.Conv2d(1, 32, kernel_size=8, stride=4)\n",
+        "#         #self.bn1 = nn.BatchNorm2d(16)\n",
+        "#         self.conv2 = nn.Conv2d(32, 64, kernel_size=4, stride=2)\n",
+        "#         #self.bn2 = nn.BatchNorm2d(32)\n",
+        "#         self.conv3 = nn.Conv2d(64, 64, kernel_size=3, stride=1)\n",
+        "#         #self.bn3 = nn.BatchNorm2d(32)\n",
         "\n",
-        "        # Number of Linear input connections depends on output of conv2d layers\n",
-        "        # and therefore the input image size, so compute it.\n",
-        "        def conv2d_size_out(size, kernel_size = 5, stride = 2):\n",
-        "            return (size - (kernel_size - 1) - 1) // stride  + 1\n",
+        "#         self.pooling = nn.MaxPool2d(3, stride=2)\n",
         "\n",
-        "        convw = conv2d_size_out(conv2d_size_out(conv2d_size_out(w)))\n",
-        "        convh = conv2d_size_out(conv2d_size_out(conv2d_size_out(h)))\n",
-        "        linear_input_size = convw * convh * 32\n",
+        "#         # Number of Linear input connections depends on output of conv2d layers\n",
+        "#         # and therefore the input image size, so compute it.\n",
+        "#         def conv2d_size_out(size, kernel_size = 5, stride = 2):\n",
+        "#             return (size - (kernel_size - 1) - 1) // stride  + 1\n",
         "\n",
-        "        self.pre_adventage = nn.Linear(6400, 512)\n",
-        "        self.adventage = nn.Linear(512, outputs)\n",
+        "#         convw = conv2d_size_out(conv2d_size_out(conv2d_size_out(w)))\n",
+        "#         convh = conv2d_size_out(conv2d_size_out(conv2d_size_out(h)))\n",
+        "#         linear_input_size = convw * convh * 32\n",
         "\n",
-        "        self.pre_val = nn.Linear(6400, 512)\n",
-        "        self.val = nn.Linear(512, 1)\n",
+        "#         self.pre_adventage = nn.Linear(6400, 512)\n",
+        "#         self.adventage = nn.Linear(512, outputs)\n",
+        "\n",
+        "#         self.pre_val = nn.Linear(6400, 512)\n",
+        "#         self.val = nn.Linear(512, 1)\n",
         " \n",
-        "    # Called with either one element to determine next action, or a batch\n",
-        "    # during optimization. Returns tensor([[left0exp,right0exp]...]).\n",
-        "    def forward(self, x):\n",
-        "        x = x.to(device)\n",
-        "        # x = F.relu(self.bn1(self.conv1(x)))\n",
-        "        # x = F.relu(self.bn2(self.conv2(x)))\n",
-        "        # x = F.relu(self.bn3(self.conv3(x)))\n",
-        "        x = F.relu(self.conv1(x))\n",
-        "        x = F.relu(self.conv2(x))\n",
-        "        x = F.relu(self.conv3(x))\n",
-        "        x = x.view(x.size(0), -1)\n",
+        "#     # Called with either one element to determine next action, or a batch\n",
+        "#     # during optimization. Returns tensor([[left0exp,right0exp]...]).\n",
+        "#     def forward(self, x):\n",
+        "#         x = x.to(device)\n",
+        "#         # x = F.relu(self.bn1(self.conv1(x)))\n",
+        "#         # x = F.relu(self.bn2(self.conv2(x)))\n",
+        "#         # x = F.relu(self.bn3(self.conv3(x)))\n",
+        "#         x = F.relu(self.conv1(x))\n",
+        "#         x = F.relu(self.conv2(x))\n",
+        "#         x = F.relu(self.conv3(x))\n",
+        "#         x = x.view(x.size(0), -1)\n",
         "\n",
         "\n",
         "       \n",
         "\n",
-        "        value = F.relu(self.pre_val(x))\n",
-        "        value =  self.val(value)\n",
+        "#         value = F.relu(self.pre_val(x))\n",
+        "#         value =  self.val(value)\n",
         "\n",
-        "        adv = F.relu(self.pre_adventage(x))\n",
+        "#         adv = F.relu(self.pre_adventage(x))\n",
         "\n",
-        "        adv =  self.adventage(adv)\n",
+        "#         adv =  self.adventage(adv)\n",
         "\n",
-        "        return value + adv - adv.mean()\n",
+        "#         return value + adv - adv.mean()\n",
         "  \n",
+        "#     def init_weights(self):\n",
+        "#       torch.nn.init.xavier_uniform(self.conv1.weight)\n",
+        "#       torch.nn.init.xavier_uniform(self.conv2.weight)\n",
+        "#       torch.nn.init.xavier_uniform(self.conv3.weight)\n",
+        "#       torch.nn.init.xavier_uniform(self.adventage.weight)\n",
+        "#       torch.nn.init.xavier_uniform(self.val.weight)\n",
+        "#       torch.nn.init.xavier_uniform(self.pre_adventage.weight)\n",
+        "#       torch.nn.init.xavier_uniform(self.pre_val.weight)\n",
+        "\n",
+        "\n",
+        "class DQN(nn.Module):\n",
+        "    def __init__(self, outputs):\n",
+        "        super().__init__()\n",
+        "\n",
+        "        self.conv1 = nn.Conv2d(1, 6, 5)\n",
+        "        self.pool1 = nn.MaxPool2d(2, 2)\n",
+        "        self.pool2 = nn.MaxPool2d(2, 2)\n",
+        "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
+        "\n",
+        "        self.pre_adv = nn.Linear(10000, 512)\n",
+        "        self.adv = nn.Linear(512, outputs)\n",
+        "\n",
+        "        self.pre_val = nn.Linear(10000, 512)\n",
+        "        self.val = nn.Linear(512, 1)\n",
+        "        \n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = x.to(device)\n",
+        "        x = self.pool1(F.relu(self.conv1(x)))\n",
+        "\n",
+        "        \n",
+        "        x = self.pool2(F.relu(self.conv2(x)))\n",
+        "        x = torch.flatten(x, 1) # flatten all dimensions except batch\n",
+        "\n",
+        "        adv = F.relu(self.pre_adv(x))\n",
+        "        adv = self.adv(adv)\n",
+        "\n",
+        "        value = F.relu(self.pre_val(x))\n",
+        "        value = self.val(value)\n",
+        "        \n",
+        "        \n",
+        "        return value + adv - adv.mean()\n",
+        "\n",
+        "    \n",
         "    def init_weights(self):\n",
         "      torch.nn.init.xavier_uniform(self.conv1.weight)\n",
         "      torch.nn.init.xavier_uniform(self.conv2.weight)\n",
-        "      torch.nn.init.xavier_uniform(self.conv3.weight)\n",
-        "      torch.nn.init.xavier_uniform(self.adventage.weight)\n",
+        "      \n",
+        "      torch.nn.init.xavier_uniform(self.pre_adv.weight)\n",
+        "      torch.nn.init.xavier_uniform(self.adv.weight)\n",
+        "\n",
+        "      torch.nn.init.xavier_uniform(self.pre_val.weight)\n",
         "      torch.nn.init.xavier_uniform(self.val.weight)\n",
-        "      torch.nn.init.xavier_uniform(self.pre_adventage.weight)\n",
-        "      torch.nn.init.xavier_uniform(self.pre_val.weight)\n"
+        "\n",
+        "      return self\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -272,11 +297,27 @@
         "id": "QD9JHXWNXNi1"
       },
       "source": [
-        "# policy_net = DQN(screen_height, screen_width, n_actions)\n",
-        "# policy_net.init_weights()\n",
-        "# policy_net.to(device)\n",
+        "# m1 = nn.MaxPool2d(3, stride=2)\n",
+        "# m2 = nn.MaxPool2d(3, stride=2)\n",
+        "# state = get_screen().unsqueeze(0)\n",
+        "# conv1 = nn.Conv2d(1, 32, kernel_size=8, stride=4)\n",
+        "# conv2 = nn.Conv2d(32, 64, kernel_size=4, stride=2)\n",
+        "# conv3 = nn.Conv2d(64, 64, kernel_size=3, stride=1)\n",
         "\n",
-        "# t = policy_net(state)"
+        "# i = conv1(state)\n",
+        "# x1 = i.shape\n",
+        "\n",
+        "# i = m1(i)\n",
+        "# x2=i.shape\n",
+        "# i = conv2(i)\n",
+        "# i = m2(i)\n",
+        "\n",
+        "# i.shape\n",
+        "\n",
+        "# x = DQN(13)\n",
+        "# x = x.init_weights().to(device)\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -301,7 +342,7 @@
         "    #return screen\n",
         "    return resize(screen)\n",
         "\n",
-        "get_screen().shape\n",
+        "\n",
         "    "
       ],
       "execution_count": null,
@@ -336,36 +377,23 @@
         "# which is the result of a clamped and down-scaled render buffer in get_screen()\n",
         "init_screen = get_screen()\n",
         "\n",
-        "\n",
-        "\n",
         "_, screen_height, screen_width = init_screen.shape\n",
         "\n",
         "# Get number of actions from gym action space\n",
         "n_actions = env.action_space.n\n",
         "\n",
-        "policy_net = DQN(screen_height, screen_width, n_actions)\n",
+        "policy_net = DQN(n_actions)\n",
         "policy_net.init_weights()\n",
         "policy_net.to(device)\n",
         "\n",
-        "target_net = DQN(screen_height, screen_width, n_actions).to(device)\n",
+        "target_net = DQN(n_actions).to(device)\n",
         "target_net.load_state_dict(policy_net.state_dict())\n",
         "target_net.eval()\n",
         "\n",
-        "# optimizer = optim.RMSprop(policy_net.parameters())\n",
-        "# criterion = nn.SmoothL1Loss() #beta=0.1\n",
+        "optimizer = optim.RMSprop(policy_net.parameters(), lr=0.001)\n",
+        "criterion = nn.SmoothL1Loss() #beta=0.1\n",
         "\n",
         "# screen_height, screen_width"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WIpjRSxMl4FY"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -409,52 +437,29 @@
         "    global steps_done\n",
         "    steps_done += 1\n",
         "\n",
-        "    # sample = random.random()\n",
-        "    # eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
-        "    #     math.exp(-1. * steps_done / EPS_DECAY)\n",
+        "    sample = random.random()\n",
+        "    eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
+        "        math.exp(-1. * steps_done / EPS_DECAY)\n",
         "    \n",
-        "    # if sample > eps_threshold:\n",
-        "    #     with torch.no_grad():\n",
-        "    #         # t.max(1) will return largest column value of each row.\n",
-        "    #         # second column on max result is index of where max element was\n",
-        "    #         # found, so we pick action with the larger expected reward.\n",
-        "    #         return policy_net(state).max(1)[1].view(1, 1)\n",
-        "    # else:\n",
-        "    #     return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
+        "    if sample > eps_threshold:\n",
+        "        with torch.no_grad():\n",
+        "            # t.max(1) will return largest column value of each row.\n",
+        "            # second column on max result is index of where max element was\n",
+        "            # found, so we pick action with the larger expected reward.\n",
+        "            return policy_net(state).max(1)[1].view(1, 1)\n",
+        "    else:\n",
+        "        return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
         "\n",
-        "    with torch.no_grad():\n",
-        "      xxx = policy_net(state).cpu().detach().numpy().flatten()\n",
-        "      m = xxx.min()\n",
-        "      vals = xxx - m + 0.0001\n",
+        "    # with torch.no_grad():\n",
+        "    #   xxx = policy_net(state).cpu().detach().numpy().flatten()\n",
+        "    #   m = xxx.min()\n",
+        "    #   vals = xxx - m + 0.0001\n",
         "\n",
-        "      s = np.sum(vals)\n",
-        "      ps = vals/s\n",
+        "    #   s = np.sum(vals)\n",
+        "    #   ps = vals/s\n",
         "\n",
-        "      val = np.random.choice(n_actions, p = ps)\n",
-        "      return torch.tensor([[val]], device=device, dtype=torch.long)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "def plot_durations():\n",
-        "    plt.figure(2)\n",
-        "    plt.clf()\n",
-        "    durations_t = torch.tensor(episode_durations, dtype=torch.float)\n",
-        "    plt.title('Training...')\n",
-        "    plt.xlabel('Episode')\n",
-        "    plt.ylabel('Duration')\n",
-        "    plt.plot(durations_t.numpy())\n",
-        "    # Take 100 episode averages and plot them too\n",
-        "    if len(durations_t) >= 100:\n",
-        "        means = durations_t.unfold(0, 100, 1).mean(1).view(-1)\n",
-        "        means = torch.cat((torch.zeros(99), means))\n",
-        "        plt.plot(means.numpy())\n",
-        "\n",
-        "    plt.pause(0.001)  # pause a bit so that plots are updated\n",
-        "    if is_ipython:\n",
-        "        display.clear_output(wait=True)\n",
-        "        display.display(plt.gcf())"
+        "    #   val = np.random.choice(n_actions, p = ps)\n",
+        "    #   return torch.tensor([[val]], device=device, dtype=torch.long)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -516,6 +521,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "zkiUiikI8jve"
+      },
+      "source": [
+        "env.max_steps"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "k4tX-KDmo2ND"
       },
       "source": [
@@ -530,7 +546,7 @@
         "\n",
         "for i_episode in range(num_episodes):\n",
         "    \n",
-        "    if i_episode % 100 == 0:\n",
+        "    if i_episode % 50 == 0:\n",
         "      print(i_episode)\n",
         "\n",
         "    env.reset()\n",
