--- a/SOKOBAN_Dueling_DQN_full_play.ipynb
+++ b/SOKOBAN_Dueling_DQN_full_play.ipynb
@@ -114,7 +114,7 @@
       },
       "source": [
         "env = gym.make(\"PushAndPull-Sokoban-v2\")\n",
-        "env.max_steps =  5000 \n",
+        "env.max_steps =  500 \n",
         "screen = env.render(mode='rgb_array')\n",
         "print(screen.shape)"
       ],
@@ -351,17 +351,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "giRoHq8qVD3S"
-      },
-      "source": [
-        "init_screen.shape"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "rUc-gABhkwNu"
       },
       "source": [
@@ -532,6 +521,21 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "tHZH3s3YKDbV"
+      },
+      "source": [
+        "# l = [0.2, 0.2,0.2,0.2,0.2]\n",
+        "\n",
+        "# [ x * np.power(0.8, i) for (i, x ) in  enumerate(l)]\n",
+        "\n",
+        "list(range(5, -1, -1))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "k4tX-KDmo2ND"
       },
       "source": [
@@ -542,7 +546,7 @@
         "policy_net.train()\n",
         "target_net.eval()\n",
         "sarsa_k = 1\n",
-        "\n",
+        "window = 5\n",
         "\n",
         "for i_episode in range(num_episodes):\n",
         "    \n",
@@ -552,47 +556,43 @@
         "    env.reset()\n",
         "    state = get_screen().unsqueeze(0)\n",
         "\n",
-        "    prev_states = []\n",
-        "    sarsa_k_states = []\n",
+        "    \n",
+        "    temp_rewards = []\n",
+        "    temp_mempry =[]\n",
         "    for t in count():\n",
         "        action = select_action(state)\n",
         "        _, reward, done, _ = env.step(action.item())\n",
-        "        reward = torch.tensor([reward], device=device)\n",
+        "        \n",
         "        next_state = get_screen().unsqueeze(0)\n",
         "\n",
-        "        if not done:\n",
-        "          if sarsa_k == 1:\n",
-        "            memory.push(state, action, next_state, reward)\n",
-        "          else:\n",
-        "            sarsa_k_states_new = []\n",
-        "            for prev_state, prev_action, _, prev_rewards, prev_counter in sarsa_k_states:\n",
-        "              k_rewards = prev_rewards + reward\n",
-        "              counter = prev_counter +  1\n",
+        "        if done:\n",
+        "          next_state = None\n",
+        "        temp_mempry.append((state, action, next_state))\n",
+        "        temp_rewards.append(reward)\n",
         "\n",
-        "              if counter == sarsa_k:\n",
-        "                memory.push(prev_state, prev_action, next_state, k_rewards)\n",
-        "              else:\n",
-        "                sarsa_k_states_new.append((prev_state, prev_action, None, k_rewards, counter))\n",
-        "          \n",
-        "            sarsa_k_states_new.append((state, action, None, reward, 1))\n",
-        "            sarsa_k_states = sarsa_k_states_new\n",
-        "            sarsa_k_states_new = None\n",
-        "        else:\n",
-        "            next_state = None\n",
+        "        \n",
+        "        if done:\n",
         "\n",
-        "            for prev_state, prev_action, _, prev_rewards, prev_counter in sarsa_k_states:\n",
-        "              k_rewards = prev_rewards + reward\n",
-        "              memory.push(prev_state, prev_action, next_state, k_rewards)\n",
-        "            \n",
+        "          for (index, data) in enumerate(temp_mempry):\n",
+        "            state, action, next_state = data \n",
+        "            full_rewards = temp_rewards[index: index + window]\n",
+        "\n",
+        "            if t == env.max_steps - 1:\n",
+        "              if len(full_rewards) < window:\n",
+        "                # print(index)\n",
+        "                continue\n",
+        "            else:\n",
+        "              print('well {}'.format(t))\n",
+        "\n",
+        "            reward = np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(full_rewards)])\n",
+        "            reward = torch.tensor([reward], device=device).float()\n",
         "            memory.push(state, action, next_state, reward)\n",
         "\n",
-        "      \n",
         "\n",
         "        state = next_state\n",
         "\n",
         "        if steps_done % BATCH_SIZE == 0:\n",
         "          optimize_model()\n",
-        "\n",
         "        if done:\n",
         "            episode_durations.append(t + 1)\n",
         "            #plot_durations()\n",
@@ -617,7 +617,28 @@
         "id": "PPPzMs7aC4KN"
       },
       "source": [
-        "len(episode_durations)"
+        "\n",
+        "ii = []\n",
+        "for (index, data) in enumerate(temp_mempry):\n",
+        "  state, action, next_state = data \n",
+        "  full_rewards = temp_rewards[index: index + window]\n",
+        "\n",
+        "  if 1==1:\n",
+        "    if len(full_rewards) < window:\n",
+        "      print('skip {}'.format(index))\n",
+        "      continue\n",
+        "                \n",
+        "    reward = np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(full_rewards)])\n",
+        "\n",
+        " \n",
+        "\n",
+        "    ii.append((state, action, next_state, reward))\n",
+        "\n",
+        "    if reward > -0.33:\n",
+        "      print((len(ii), reward))\n",
+        "\n",
+        "\n",
+        "# ii[180][-1]"
       ],
       "execution_count": null,
       "outputs": []
@@ -758,6 +779,18 @@
       "source": [
         "\n",
         "x = env.reset()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H7q9THghMsFT"
+      },
+      "source": [
+        "# p1, reward, done, p2 = env.step(action.item())\n",
+        "p2, done"
       ],
       "execution_count": null,
       "outputs": []
