--- a/SOKOBAN_Dueling_DQN_full_play.ipynb
+++ b/SOKOBAN_Dueling_DQN_full_play.ipynb
@@ -546,7 +546,7 @@
         "policy_net.train()\n",
         "target_net.eval()\n",
         "sarsa_k = 1\n",
-        "window = 5\n",
+        "window = 10\n",
         "\n",
         "for i_episode in range(num_episodes):\n",
         "    \n",
@@ -581,8 +581,8 @@
         "              if len(full_rewards) < window:\n",
         "                # print(index)\n",
         "                continue\n",
-        "            else:\n",
-        "              print('well {}'.format(t))\n",
+        "            # else:\n",
+        "            #   print('well {}'.format(t))\n",
         "\n",
         "            reward = np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(full_rewards)])\n",
         "            reward = torch.tensor([reward], device=device).float()\n",
