--- a/SOKOBAN_Dueling_DQN_full_play.ipynb
+++ b/SOKOBAN_Dueling_DQN_full_play.ipynb
@@ -426,29 +426,29 @@
         "    global steps_done\n",
         "    steps_done += 1\n",
         "\n",
-        "    sample = random.random()\n",
-        "    eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
-        "        math.exp(-1. * steps_done / EPS_DECAY)\n",
+        "    # sample = random.random()\n",
+        "    # eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
+        "    #     math.exp(-1. * steps_done / EPS_DECAY)\n",
         "    \n",
-        "    if sample > eps_threshold:\n",
-        "        with torch.no_grad():\n",
-        "            # t.max(1) will return largest column value of each row.\n",
-        "            # second column on max result is index of where max element was\n",
-        "            # found, so we pick action with the larger expected reward.\n",
-        "            return policy_net(state).max(1)[1].view(1, 1)\n",
-        "    else:\n",
-        "        return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
+        "    # if sample > eps_threshold:\n",
+        "    #     with torch.no_grad():\n",
+        "    #         # t.max(1) will return largest column value of each row.\n",
+        "    #         # second column on max result is index of where max element was\n",
+        "    #         # found, so we pick action with the larger expected reward.\n",
+        "    #         return policy_net(state).max(1)[1].view(1, 1)\n",
+        "    # else:\n",
+        "    #     return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
         "\n",
-        "    # with torch.no_grad():\n",
-        "    #   xxx = policy_net(state).cpu().detach().numpy().flatten()\n",
-        "    #   m = xxx.min()\n",
-        "    #   vals = xxx - m + 0.0001\n",
+        "    with torch.no_grad():\n",
+        "      xxx = policy_net(state).cpu().detach().numpy().flatten()\n",
+        "      m = xxx.min()\n",
+        "      vals = xxx - m + 0.0001 if m < 0 else xxx + 0.0001\n",
         "\n",
-        "    #   s = np.sum(vals)\n",
-        "    #   ps = vals/s\n",
+        "      s = np.sum(vals)\n",
+        "      ps = vals/s\n",
         "\n",
-        "    #   val = np.random.choice(n_actions, p = ps)\n",
-        "    #   return torch.tensor([[val]], device=device, dtype=torch.long)\n"
+        "      val = np.random.choice(n_actions, p = ps)\n",
+        "      return torch.tensor([[val]], device=device, dtype=torch.long)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -618,27 +618,27 @@
       },
       "source": [
         "\n",
-        "ii = []\n",
-        "for (index, data) in enumerate(temp_mempry):\n",
-        "  state, action, next_state = data \n",
-        "  full_rewards = temp_rewards[index: index + window]\n",
+        "# ii = []\n",
+        "# for (index, data) in enumerate(temp_mempry):\n",
+        "#   state, action, next_state = data \n",
+        "#   full_rewards = temp_rewards[index: index + window]\n",
         "\n",
-        "  if 1==1:\n",
-        "    if len(full_rewards) < window:\n",
-        "      print('skip {}'.format(index))\n",
-        "      continue\n",
+        "#   if 1==1:\n",
+        "#     if len(full_rewards) < window:\n",
+        "#       print('skip {}'.format(index))\n",
+        "#       continue\n",
         "                \n",
-        "    reward = np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(full_rewards)])\n",
+        "#     reward = np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(full_rewards)])\n",
         "\n",
         " \n",
         "\n",
-        "    ii.append((state, action, next_state, reward))\n",
+        "#     ii.append((state, action, next_state, reward))\n",
         "\n",
-        "    if reward > -0.33:\n",
-        "      print((len(ii), reward))\n",
+        "#     if reward > -0.33:\n",
+        "#       print((len(ii), reward))\n",
         "\n",
         "\n",
-        "# ii[180][-1]"
+        "# # ii[180][-1]"
       ],
       "execution_count": null,
       "outputs": []
@@ -678,7 +678,7 @@
         "id": "PZtJ5miaCDlq"
       },
       "source": [
-        ""
+        "len(episode_durations)"
       ],
       "execution_count": null,
       "outputs": []
@@ -689,7 +689,7 @@
         "id": "eH6MnfRSX54A"
       },
       "source": [
-        "i_episode"
+        "# episode_durations[-50:]"
       ],
       "execution_count": null,
       "outputs": []
