--- a/SOKOBAN_Dueling_DQN_full_play.ipynb
+++ b/SOKOBAN_Dueling_DQN_full_play.ipynb
@@ -114,7 +114,7 @@
       },
       "source": [
         "env = gym.make(\"PushAndPull-Sokoban-v2\")\n",
-        "env.max_steps =  500 \n",
+        "env.max_steps =  200 \n",
         "screen = env.render(mode='rgb_array')\n",
         "print(screen.shape)"
       ],
@@ -168,6 +168,17 @@
         "\n",
         "    def __len__(self):\n",
         "        return len(self.memory)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bGFP0pbRbs6r"
+      },
+      "source": [
+        "F.leaky_relu"
       ],
       "execution_count": null,
       "outputs": []
@@ -260,16 +271,16 @@
         "\n",
         "    def forward(self, x):\n",
         "        x = x.to(device)\n",
-        "        x = self.pool1(F.relu(self.conv1(x)))\n",
+        "        x = self.pool1(F.leaky_relu(self.conv1(x)))\n",
         "\n",
         "        \n",
-        "        x = self.pool2(F.relu(self.conv2(x)))\n",
+        "        x = self.pool2(F.leaky_relu(self.conv2(x)))\n",
         "        x = torch.flatten(x, 1) # flatten all dimensions except batch\n",
         "\n",
-        "        adv = F.relu(self.pre_adv(x))\n",
+        "        adv = F.leaky_relu(self.pre_adv(x))\n",
         "        adv = self.adv(adv)\n",
         "\n",
-        "        value = F.relu(self.pre_val(x))\n",
+        "        value = F.leaky_relu(self.pre_val(x))\n",
         "        value = self.val(value)\n",
         "        \n",
         "        \n",
@@ -351,15 +362,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rUc-gABhkwNu"
+        "id": "6-Jsu3hTX0Su"
       },
       "source": [
-        "BATCH_SIZE = 32\n",
+        "BATCH_SIZE = 128\n",
         "GAMMA = 0.9\n",
         "EPS_START = 1.0\n",
         "EPS_END = 0.1\n",
         "EPS_DECAY = 60000\n",
-        "TARGET_UPDATE = 10\n",
+        "TARGET_UPDATE = 10"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rUc-gABhkwNu"
+      },
+      "source": [
+        "\n",
         "\n",
         "# Get screen size so that we can initialize layers correctly based on shape\n",
         "# returned from AI gym. Typical dimensions at this point are close to 3x40x90\n",
@@ -380,7 +402,7 @@
         "target_net.eval()\n",
         "\n",
         "optimizer = optim.RMSprop(policy_net.parameters(), lr=0.001)\n",
-        "criterion = nn.SmoothL1Loss() #beta=0.1\n",
+        "criterion = nn.SmoothL1Loss() #nn.SmoothL1Loss(reduction='mean', beta=0.3) #beta=0.1\n",
         "\n",
         "# screen_height, screen_width"
       ],
@@ -486,10 +508,10 @@
         "    # on the \"older\" target_net; selecting their best reward with max(1)[0].\n",
         "    # This is merged based on the mask, such that we'll have either the expected\n",
         "    # state value or 0 in case the state was final.\n",
-        "    next_state_values = torch.zeros(BATCH_SIZE, device=device)\n",
-        "    next_state_values[non_final_mask] = target_net(non_final_next_states).max(1)[0].detach()\n",
-        "    # Compute the expected Q values\n",
-        "    expected_state_action_values = (next_state_values * GAMMA) + reward_batch\n",
+        "    # next_state_values = torch.zeros(BATCH_SIZE, device=device)\n",
+        "    # next_state_values[non_final_mask] = target_net(non_final_next_states).max(1)[0].detach()\n",
+        "    # # Compute the expected Q values\n",
+        "    expected_state_action_values = reward_batch #(next_state_values * GAMMA) + reward_batch\n",
         "\n",
         "    # Compute Huber loss\n",
         "    \n",
@@ -524,11 +546,10 @@
         "id": "tHZH3s3YKDbV"
       },
       "source": [
-        "# l = [0.2, 0.2,0.2,0.2,0.2]\n",
+        "# l = [-0.1, -0.1,-0.1,-0.1,-0.1,-0.1,-0.1,-0.1,-0.1,-0.1]\n",
         "\n",
-        "# [ x * np.power(0.8, i) for (i, x ) in  enumerate(l)]\n",
-        "\n",
-        "list(range(5, -1, -1))"
+        "# np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(l)])\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -542,7 +563,7 @@
         "num_episodes = 10000\n",
         "episode_durations = []\n",
         "steps_done = 0\n",
-        "memory = ReplayMemory(2500)\n",
+        "memory = ReplayMemory(1000)\n",
         "policy_net.train()\n",
         "target_net.eval()\n",
         "sarsa_k = 1\n",
@@ -689,7 +710,7 @@
         "id": "eH6MnfRSX54A"
       },
       "source": [
-        "# episode_durations[-50:]"
+        "episode_durations[-50:]"
       ],
       "execution_count": null,
       "outputs": []
